[dependencies]
anyhow = "1.0.71"
clap = {version = "4.3.11", features = ["derive", "wrap_help", "env"]}
clap_complete = "4.2.2"
is-terminal = "0.4.7"
lopdf = "0.31.0"
owo-colors = "3.5.0"
tabled = {version = "0.12.0", features = ["color"]}
termcolor = "1.2.0"
thiserror = "1.0.40"
wild = "2.1.0"

[package]
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
description = "PDF command-line utils written in Rust"
edition = "2021"
include = ["src/**/*", "LICENSE.md", "README.md"]
keywords = ["pdf", "annotation", "cli", "utils"]
license = "MIT"
name = "rpdf"
readme = "README.md"
repository = "https://github.com/jeertmans/rpdf"
rust-version = "1.64.0"
version = "0.1.1"
