[dependencies]
anyhow = "1.0.71"
clap = {version = "4.5.0", features = ["derive", "wrap_help", "env"]}
clap-verbosity-flag = "2.1.2"
clap_complete = "4.5.0"
dialoguer = "0.11.0"
is-terminal = "0.4.11"
log = "0.4.20"
lopdf = "0.32.0"
owo-colors = "4.0.0"
tabled = {version = "0.14.0", features = ["color"]}
pretty_env_logger = "0.5.0"
termcolor = "1.2.0"
thiserror = "1.0.44"
wild = "2.2.1"

[package]
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
description = "PDF command-line utils written in Rust"
edition = "2021"
include = ["src/**/*", "LICENSE.md", "README.md"]
keywords = ["pdf", "annotation", "cli", "utils"]
license = "MIT"
name = "rpdf"
readme = "README.md"
repository = "https://github.com/jeertmans/rpdf"
rust-version = "1.74.0"
version = "0.1.3"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
