[dependencies]
anyhow = "1.0.83"
clap = {version = "4.5.4", features = ["derive", "wrap_help", "env"]}
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.2"
dialoguer = "0.11.0"
is-terminal = "0.4.12"
log = "0.4.21"
lopdf = "0.33.0"
owo-colors = "4.0.0"
tabled = {version = "0.14.0", features = ["color"]}
pretty_env_logger = "0.5.0"
termcolor = "1.2.0"
thiserror = "1.0.60"
wild = "2.2.1"

[package]
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
description = "PDF command-line utils written in Rust"
edition = "2021"
include = ["src/**/*", "LICENSE.md", "README.md"]
keywords = ["pdf", "annotation", "cli", "utils"]
license = "MIT"
name = "rpdf"
readme = "README.md"
repository = "https://github.com/jeertmans/rpdf"
rust-version = "1.74.0"
version = "0.1.3"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
